[gd_scene load_steps=23 format=3 uid="uid://bxup2rkksx6g1"]

[ext_resource type="Script" uid="uid://dp870a6rqd874" path="res://Scripts/CameraController.gd" id="1_bejc1"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_6fjuf"]
[ext_resource type="Material" uid="uid://gaelj660aco3" path="res://Shaders/FogofWarMaterial.tres" id="3_6fjuf"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="3_o5x0x"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_1qdt5"]
[ext_resource type="Script" uid="uid://mg5g38d61gap" path="res://Scripts/GameManager.gd" id="5_6ppp3"]
[ext_resource type="Script" uid="uid://bcbu1daq3ta3q" path="res://Scripts/Terrain Generation/MeshTerrainManager.gd" id="6_t2hbq"]
[ext_resource type="Script" uid="uid://nrsj1jjbrlxq" path="res://Scripts/Managers/InventoryManager.gd" id="7_l7dpb"]
[ext_resource type="Script" uid="uid://bjauxagwg8odf" path="res://Scripts/GridSystem/GridSystem.gd" id="8_qefp6"]
[ext_resource type="Script" uid="uid://cerynvxcca4bv" path="res://Scripts/Managers/UnitManager.gd" id="9_1k357"]
[ext_resource type="Script" uid="uid://cq3ef3ssfwu7w" path="res://Scripts/Managers/UIManager.gd" id="9_bejc1"]
[ext_resource type="PackedScene" uid="uid://hhe7ab2xbje0" path="res://Scenes/GridObjects/Unit.tscn" id="10_hnvwn"]
[ext_resource type="Script" uid="uid://coshpv2sr0u8e" path="res://Scripts/UnitTeamHolder.gd" id="11_5hsxw"]
[ext_resource type="Script" uid="uid://b37fgk4b3tfnn" path="res://Scripts/Managers/GridInputManager.gd" id="13_be24s"]
[ext_resource type="Script" uid="uid://qbdewo8k424a" path="res://Scripts/Managers/UnitActionManager.gd" id="14_co1qo"]
[ext_resource type="Script" uid="uid://duiusploqylre" path="res://Scripts/Managers/Pathfinder.gd" id="15_t4bds"]
[ext_resource type="Script" uid="uid://swicsbxj3n2f" path="res://Scripts/Managers/TurnManager.gd" id="16_wvoxn"]
[ext_resource type="Script" uid="uid://c0303oxw6al88" path="res://Scripts/Managers/FogManager.gd" id="17_6fjuf"]
[ext_resource type="Material" uid="uid://dqvadbsa7g3b8" path="res://Shaders/FOW.tres" id="19_1qdt5"]
[ext_resource type="Texture2D" uid="uid://byb7gikisgnmc" path="res://art/ground_albedo.png" id="20_e3qp5"]

[sub_resource type="Resource" id="Resource_lcfwl"]
script = ExtResource("4_1qdt5")

[sub_resource type="Resource" id="Resource_at5uv"]
script = ExtResource("4_1qdt5")

[node name="MainGame" type="Node3D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("5_6ppp3")
current_scene_name = "BattleScene"
metadata/_custom_type_script = "uid://mg5g38d61gap"

[node name="MeshTerrainManager" type="Node" parent="GameManager" groups=["Managers"]]
script = ExtResource("6_t2hbq")
cell_size = Vector2(1, 0.5)
material = ExtResource("3_6fjuf")
amplitude = 5.0
metadata/_custom_type_script = "uid://bcbu1daq3ta3q"

[node name="InventoryManager" type="Node" parent="GameManager" groups=["Managers"]]
script = ExtResource("7_l7dpb")
metadata/_custom_type_script = "uid://nrsj1jjbrlxq"

[node name="GridSystem" type="Node" parent="GameManager" groups=["Managers"]]
script = ExtResource("8_qefp6")
metadata/_custom_type_script = "uid://bjauxagwg8odf"

[node name="UIManager" type="Node" parent="GameManager"]
script = ExtResource("9_bejc1")
metadata/_custom_type_script = "uid://cq3ef3ssfwu7w"

[node name="UnitManager" type="Node" parent="GameManager" node_paths=PackedStringArray("UnitTeams") groups=["Managers"]]
script = ExtResource("9_1k357")
UnitTeams = {
1: NodePath("Player Team"),
2: NodePath("Enemy Team")
}
unitScene = ExtResource("10_hnvwn")
metadata/_custom_type_script = "uid://cerynvxcca4bv"

[node name="Player Team" type="Node" parent="GameManager/UnitManager"]
script = ExtResource("11_5hsxw")
team = 1
metadata/_custom_type_script = "uid://coshpv2sr0u8e"

[node name="Enemy Team" type="Node" parent="GameManager/UnitManager"]
script = ExtResource("11_5hsxw")
team = 2
metadata/_custom_type_script = "uid://coshpv2sr0u8e"

[node name="GridInputManager" type="Node" parent="GameManager" groups=["Managers"]]
script = ExtResource("13_be24s")
metadata/_custom_type_script = "uid://b37fgk4b3tfnn"

[node name="UnitActionManager" type="Node" parent="GameManager" groups=["Managers"]]
script = ExtResource("14_co1qo")
metadata/_custom_type_script = "uid://qbdewo8k424a"

[node name="Pathfinder" type="Node" parent="GameManager" groups=["Managers"]]
script = ExtResource("15_t4bds")
metadata/_custom_type_script = "uid://duiusploqylre"

[node name="TurnManager" type="Node" parent="GameManager" groups=["Managers"]]
script = ExtResource("16_wvoxn")
metadata/_custom_type_script = "uid://swicsbxj3n2f"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8086065, 0.58834994, 0, -0.58834994, 0.8086065, 0, 0.9739627, 0)

[node name="Camera" type="Camera3D" parent="." node_paths=PackedStringArray("transposer", "phantom_cameras")]
transform = Transform3D(0.9999976, 0, 0, 0, 0.8943163, 0.44715765, 0, -0.44715816, 0.8943153, 0, 6.291656, 12.146173)
script = ExtResource("1_bejc1")
transposer = NodePath("../Transposer")
phantom_cameras = {
"main": NodePath("../PhantomCamera3D"),
"ranged_camera": NodePath("../ActionPantomCamera")
}
metadata/_custom_type_script = "uid://dp870a6rqd874"

[node name="PhantomCameraHost" type="Node" parent="Camera"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_6fjuf")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="PhantomCamera3D" type="Node3D" parent="." node_paths=PackedStringArray("follow_target", "look_at_target")]
transform = Transform3D(0.9999976, 0, 0, 0, 0.8943163, 0.44715765, 0, -0.44715816, 0.8943153, 0, 6.291656, 12.146173)
top_level = true
script = ExtResource("3_o5x0x")
priority = 1
follow_mode = 5
follow_target = NodePath("../Transposer")
look_at_mode = 2
look_at_target = NodePath("../Transposer")
tween_resource = SubResource("Resource_lcfwl")
follow_offset = Vector3(0, 5, 10)
follow_damping = true
look_at_damping = true
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="Transposer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.84449816, 1.2518566)

[node name="ActionPantomCamera" type="Node3D" parent="."]
top_level = true
script = ExtResource("3_o5x0x")
follow_mode = 2
look_at_mode = 2
tween_resource = SubResource("Resource_at5uv")
tween_on_load = false
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="FogManager" type="Node" parent="."]
script = ExtResource("17_6fjuf")
flip_z_in_image = false
draw_test_patch = true
test_material = ExtResource("19_1qdt5")
terrain_texture = ExtResource("20_e3qp5")
metadata/_custom_type_script = "uid://c0303oxw6al88"
